# codex-ai

./: .env.example  .gitignore  Makefile  README.md  deerflow_adapter.py  docker-compose.yml  test_bot.py
deerflow/: config.yaml
deerflow/skills/custom/tool-builder/: SKILL.md
deerflow/skills/custom/tool-supervisor/: SKILL.md
docker/: Dockerfile.gateway
docker/base-images/: python-api.Dockerfile  python-bot.Dockerfile
python/prompts/: coder.md  critic.md  devops.md  planner.md  researcher.md  tester.md
python/src/: llm_client.py  memory.py  worker.py
python/src/agents/: __init__.py  coder.py  critic.py  devops.py  planner.py  researcher.py  tester.py
python/tests/: test_agents.py  test_worker.py
rust/: Cargo.toml
rust/src/: config.rs  main.rs
rust/src/bridge/: deerflow.rs  mod.rs  python.rs
rust/src/gateway/: bot.rs  mod.rs  router.rs  topics.rs
rust/src/orchestrator/: builder.rs  deployer.rs  mod.rs  queue.rs  ram_guard.rs
rust/src/scheduler/: cron.rs  mod.rs
rust/src/supervisor/: mod.rs  process.rs
scripts/: install-vps.ps1  setup.ps1  setup.sh  start-all.ps1
